--- a/sys/vrc6/layout.cfg
+++ b/sys/vrc6/layout.cfg
@@ -65,6 +65,10 @@ SEGMENTS {
     PRG_INIT_MAP:load = PRG_FIXED,  type = ro, optional = yes;
     PRG_INIT_CUSTOM:load = PRG_FIXED,type = ro, optional = yes;
     PRG_INIT_2: load = PRG_FIXED,   type = ro;
+    
+    NMI_HANDLE_1: load = PRG_FIXED,   type = ro;
+    NMI_HANDLE_CUSTOM: load = PRG_FIXED,   type = ro, optional = yes;
+    NMI_HANDLE_2: load = PRG_FIXED,   type = ro;
 
     # Bank CODE when possible. only needs to be swapped in during `zerobss` and `copydata`
     CODE:       load = PRG_FIXED,   type = ro,  define = yes; # C support
