Added Famistudio library

--- a/sys/mmc5/layout.cfg
+++ b/sys/mmc5/layout.cfg
@@ -32,7 +32,7 @@ MEMORY {
     PRG_BANK_0: start = $8000, size = $2000, type = ro, file = %O, fill = yes, fillval = $11, bank = $80;
     PRG_BANK_1: start = $8000, size = $2000, type = ro, file = %O, fill = yes, fillval = $22, bank = $81;
     DATA_BANK_2: start = $A000, size = $2000, type = ro, file = %O, fill = yes, fillval = $33, bank = $82;
-    DATA_BANK_3: start = $A000, size = $2000, type = ro, file = %O, fill = yes, fillval = $44, bank = $83;
+    SAMPLE_BANK_3: start = $C000, size = $2000, type = ro, file = %O, fill = yes, fillval = $44, bank = $83;
     
     PRG_BANK_4: start = $8000, size = $2000, type = ro, file = %O, fill = yes, fillval = $55, bank = $84;
     PRG_BANK_5: start = $8000, size = $2000, type = ro, file = %O, fill = yes, fillval = $66, bank = $85;
@@ -62,9 +62,10 @@ SEGMENTS {
     CPU:        load = CPU,         type = rw,  optional = yes;
 
     
-    PRG_BANK_0: load = PRG_BANK_0,  type = ro; # bankable code sample
-    PRG_BANK_1: load = PRG_BANK_1,  type = ro; # bankable code sample
-    DATA_BANK_2: load = DATA_BANK_2,  type = ro; # bankable data sample
+    PRG_BANK_0: load = PRG_BANK_0,  type = ro; # bankable code
+    PRG_BANK_1: load = PRG_BANK_1,  type = ro; # bankable code
+    DATA_BANK_2: load = DATA_BANK_2,  type = ro; # bankable data
+    SAMPLE_BANK_3: load = SAMPLE_BANK_3,   type = ro, optional=yes,  define = yes; # bankable sample
 
     PRG_FIXED:  load = PRG_FIXED,   type = ro;
     
