--- a/sys/vrc7/layout.cfg
+++ b/sys/vrc7/layout.cfg
@@ -30,7 +30,7 @@ MEMORY {
     PRG_BANK_0: start = $8000, size = $2000, type = ro, file = %O, fill = yes, fillval = $11, bank = $00;
     PRG_BANK_1: start = $8000, size = $2000, type = ro, file = %O, fill = yes, fillval = $22, bank = $01;
     DATA_BANK_2:start = $A000, size = $2000, type = ro, file = %O, fill = yes, fillval = $33, bank = $02;
-    DATA_BANK_3:start = $A000, size = $2000, type = ro, file = %O, fill = yes, fillval = $44, bank = $03;
+    SAMPLE_BANK_3:start = $C000, size = $2000, type = ro, file = %O, fill = yes, fillval = $44, bank = $03;
     DATA_BANK_4:start = $A000, size = $2000, type = ro, file = %O, fill = yes, fillval = $55, bank = $04;
 
     PRG_FIXED:  start = $E000, size = $2000, type = ro, file = %O, fill = yes, fillval = $66;
@@ -55,9 +55,10 @@ SEGMENTS {
     CPU:        load = CPU,         type = rw,  optional = yes;
 
     
-    PRG_BANK_0: load = PRG_BANK_0,  type = ro; # bankable code sample
-    PRG_BANK_1: load = PRG_BANK_1,  type = ro; # bankable code sample
-    DATA_BANK_2: load = DATA_BANK_2,  type = ro; # bankable data sample
+    PRG_BANK_0: load = PRG_BANK_0,  type = ro; # bankable code
+    PRG_BANK_1: load = PRG_BANK_1,  type = ro; # bankable code
+    DATA_BANK_2: load = DATA_BANK_2,  type = ro; # bankable data
+    SAMPLE_BANK_3: load = SAMPLE_BANK_3,   type = ro, optional=yes,  define = yes; # bankable sample
 
     PRG_FIXED:  load = PRG_FIXED,   type = ro;
     
