--- a/sys/nrom/layout.cfg
+++ b/sys/nrom/layout.cfg
@@ -47,10 +47,10 @@ SEGMENTS {
     CPU:        load = CPU,         type = rw,  optional = yes;
 
     # these just sit in static ROM space for NROM. 
-    PRG_BANK_0: load = PRG_FIXED,   type = ro; # bankable code sample
-    PRG_BANK_1: load = PRG_FIXED,   type = ro; # bankable code sample
-    DATA_BANK_2: load = PRG_FIXED,   type = ro; # bankable data sample
-    DATA_BANK_3: load = PRG_FIXED,   type = ro, optional=yes; # bankable data sample
+    PRG_BANK_0: load = PRG_FIXED,   type = ro; # non-bankable code
+    PRG_BANK_1: load = PRG_FIXED,   type = ro; # non-bankable code
+    DATA_BANK_2: load = PRG_FIXED,   type = ro; # non-bankable data
+    SAMPLE_BANK_3: load = PRG_FIXED,   type = ro, optional=yes,  define = yes; # non-bankable sample
 
     PRG_FIXED:  load = PRG_FIXED,   type = ro;
     
