--- a/sys/uxrom/layout.cfg
+++ b/sys/uxrom/layout.cfg
@@ -54,9 +54,10 @@ SEGMENTS {
     CPU:        load = CPU,         type = rw,  optional = yes;
 
     
-    PRG_BANK_0: load = PRG_BANK_0,  type = ro; # bankable code sample
-    PRG_BANK_1: load = PRG_BANK_1,  type = ro; # bankable code sample
-    DATA_BANK_2: load = PRG_FIXED,  type = ro; # non-bankable data sample
+    PRG_BANK_0: load = PRG_BANK_0,  type = ro; # bankable code
+    PRG_BANK_1: load = PRG_BANK_1,  type = ro; # bankable code
+    DATA_BANK_2: load = PRG_FIXED,  type = ro; # non-bankable data
+    SAMPLE_BANK_3: load = PRG_FIXED,   type = ro, optional=yes,  define = yes; # non-bankable sample
 
     PRG_FIXED:  load = PRG_FIXED,   type = ro;
     
