--- a/sys/vrc6/layout.cfg
+++ b/sys/vrc6/layout.cfg
@@ -55,9 +55,10 @@ SEGMENTS {
     CPU:        load = CPU,         type = rw,  optional = yes;
 
     
-    PRG_BANK_0: load = PRG_BANK_0,  type = ro; # bankable code sample
-    PRG_BANK_1: load = PRG_BANK_1,  type = ro; # bankable code sample
-    DATA_BANK_2: load = DATA_BANK_2,  type = ro; # bankable data sample
+    PRG_BANK_0: load = PRG_BANK_0,  type = ro; # bankable code
+    PRG_BANK_1: load = PRG_BANK_1,  type = ro; # bankable code
+    DATA_BANK_2: load = DATA_BANK_2,  type = ro; # bankable data
+    SAMPLE_BANK_3: load = DATA_BANK_3,   type = ro, optional=yes,  define = yes; # bankable sample
 
     PRG_FIXED:  load = PRG_FIXED,   type = ro;
     
