Added IRQ screen scroll for mmc3 and mmc5. Touchup on segments, readme.

--- a/sys/fme-7/layout.cfg
+++ b/sys/fme-7/layout.cfg
@@ -64,12 +64,21 @@ SEGMENTS {
     
     PRG_INIT_1: load = PRG_FIXED,   type = ro;
     PRG_INIT_MAP:load = PRG_FIXED,  type = ro, optional = yes;
+    PRG_INIT_LIB:load = PRG_FIXED,  type = ro, optional = yes;
     PRG_INIT_CUSTOM:load = PRG_FIXED,type = ro, optional = yes;
     PRG_INIT_2: load = PRG_FIXED,   type = ro;
     
     NMI_HANDLE_1: load = PRG_FIXED,   type = ro;
-    NMI_HANDLE_CUSTOM: load = PRG_FIXED,   type = ro, optional = yes;
+    NMI_HANDLE_TIMING: load = PRG_FIXED,   type = ro, optional = yes;
     NMI_HANDLE_2: load = PRG_FIXED,   type = ro;
+    NMI_HANDLE_LIB: load = PRG_FIXED,   type = ro, optional = yes;
+    NMI_HANDLE_CUSTOM: load = PRG_FIXED,   type = ro, optional = yes;
+    NMI_HANDLE_3: load = PRG_FIXED,   type = ro;
+
+    IRQ_HANDLE_1: load = PRG_FIXED, type = ro;
+    IRQ_HANDLE_LIB: load = PRG_FIXED, type = ro, optional = yes;
+    IRQ_HANDLE_CUSTOM: load = PRG_FIXED, type = ro, optional = yes;
+    IRQ_HANDLE_2: load = PRG_FIXED, type = ro;
 
     # Bank CODE when possible. only needs to be swapped in during `zerobss` and `copydata`
     CODE:       load = PRG_FIXED,   type = ro,  define = yes; # C support
@@ -91,6 +100,8 @@ SYMBOLS {
     INES_SRAM:      type = weak, value = 0;   # 1 = battery backed SRAM at $6000-7FFF
     INES_PRG_BANKS: type = weak, value = 3;   # number of 16kb banks of PRG ROM (for rom size, not mapper banks)
     INES_CHR_BANKS: type = weak, value = 1;   # number of 8kb banks of CHR ROM (for rom size, not mapper banks)
+
+    MAPPER_FME7: type = weak, value = 1;
     
     # C support
     __STACKSIZE__: type = weak, value = $0100;
