--- a/sys/vrc7/layout.cfg
+++ b/sys/vrc7/layout.cfg
@@ -62,23 +62,25 @@ SEGMENTS {
 
     PRG_FIXED:  load = PRG_FIXED,   type = ro;
     
-    PRG_INIT_1: load = PRG_FIXED,   type = ro;
-    PRG_INIT_MAP:load = PRG_FIXED,  type = ro, optional = yes;
-    PRG_INIT_LIB:load = PRG_FIXED,  type = ro, optional = yes;
-    PRG_INIT_CUSTOM:load = PRG_FIXED,type = ro, optional = yes;
-    PRG_INIT_2: load = PRG_FIXED,   type = ro;
+    STARTUP_FIRE_1: load = PRG_FIXED,   type = ro;
+    STARTUP_MAP:load = PRG_FIXED,  type = ro, optional = yes;
+    STARTUP_LIB:load = PRG_FIXED,  type = ro, optional = yes;
+    STARTUP_GAME:load = PRG_FIXED,type = ro, optional = yes;
+    STARTUP_FIRE_2: load = PRG_FIXED,   type = ro;
     
-    NMI_HANDLE_1: load = PRG_FIXED,   type = ro;
-    NMI_HANDLE_TIMING: load = PRG_FIXED,   type = ro, optional = yes;
-    NMI_HANDLE_2: load = PRG_FIXED,   type = ro;
-    NMI_HANDLE_LIB: load = PRG_FIXED,   type = ro, optional = yes;
-    NMI_HANDLE_CUSTOM: load = PRG_FIXED,   type = ro, optional = yes;
-    NMI_HANDLE_3: load = PRG_FIXED,   type = ro;
+    NMI_FIRE_1: load = PRG_FIXED,   type = ro;
+    NMI_TIMING: load = PRG_FIXED,   type = ro, optional = yes;
+    NMI_FIRE_2: load = PRG_FIXED,   type = ro;
+    NMI_LIB: load = PRG_FIXED,   type = ro, optional = yes;
+    NMI_GAME: load = PRG_FIXED,   type = ro, optional = yes;
+    NMI_FIRE_3: load = PRG_FIXED,   type = ro;
+    NMI_AUDIO_LIB: load = PRG_FIXED,   type = ro, optional = yes;
+    NMI_FIRE_4: load = PRG_FIXED,   type = ro;
 
-    IRQ_HANDLE_1: load = PRG_FIXED, type = ro;
-    IRQ_HANDLE_LIB: load = PRG_FIXED, type = ro, optional = yes;
-    IRQ_HANDLE_CUSTOM: load = PRG_FIXED, type = ro, optional = yes;
-    IRQ_HANDLE_2: load = PRG_FIXED, type = ro;
+    IRQ_FIRE_1: load = PRG_FIXED, type = ro;
+    IRQ_LIB: load = PRG_FIXED, type = ro, optional = yes;
+    IRQ_GAME: load = PRG_FIXED, type = ro, optional = yes;
+    IRQ_FIRE_2: load = PRG_FIXED, type = ro;
 
     # Bank CODE when possible. only needs to be swapped in during `zerobss` and `copydata`
     CODE:       load = PRG_FIXED,   type = ro,  define = yes; # C support
