Added fixed and dynamic mirroring support, removed several functions into an optional module, big updates to Readme

--- a/sys/nrom/layout.cfg
+++ b/sys/nrom/layout.cfg
@@ -89,8 +89,8 @@ SEGMENTS {
 }
 
 SYMBOLS {
-    INES_MAPPER:    type = weak, value = 4;   # nrom
-    INES_MIRROR:    type = weak, value = 0;   # 0 = horizontal mirroring, 1 = vertical mirroring
+    INES_MAPPER:    type = weak, value = 0;   # nrom
+    # INES_MIRROR:    type = weak, value = 0;   # 0 = horizontal mirroring, 1 = vertical mirroring
     INES_SRAM:      type = weak, value = 0;   # 1 = battery backed SRAM at $6000-7FFF
     INES_PRG_BANKS: type = weak, value = 2;   # number of 16kb banks of PRG ROM (for rom size, not mapper banks)
     INES_CHR_BANKS: type = weak, value = 1;   # number of 8kb banks of CHR ROM (for rom size, not mapper banks)
