--- a/sys/vrc6/layout.cfg
+++ b/sys/vrc6/layout.cfg
@@ -98,7 +98,7 @@ SEGMENTS {
 
 SYMBOLS {
     INES_MAPPER:    type = weak, value = 24;   # VRC6
-    INES_MIRROR:    type = weak, value = 0;   # 0 = horizontal mirroring, 1 = vertical mirroring
+    # INES_MIRROR:    type = weak, value = 0;   # 0 = horizontal mirroring, 1 = vertical mirroring
     INES_SRAM:      type = weak, value = 0;   # 1 = battery backed SRAM at $6000-7FFF
     INES_PRG_BANKS: type = weak, value = 4;   # number of 16kb banks of PRG ROM (for rom size, not mapper banks)
     INES_CHR_BANKS: type = weak, value = 1;   # number of 8kb banks of CHR ROM (for rom size, not mapper banks)
