buggy implementation of famitone5

--- a/sys/nrom/layout.cfg
+++ b/sys/nrom/layout.cfg
@@ -25,7 +25,8 @@ MEMORY {
     # CPU space (cartridge)
     # UNUSED:   start = $4020, size = $1FE8, type = rw, file = "";
     # PRGRAM:   start = $6000, size = $2000, type = rw, file = "";
-    PRG_FIXED:  start = $8000, size = $8000, type = ro, file = %O;
+    PRG_FIXED_PRE:  start = $8000, size = $4000, type = ro, file = %O, fill = yes, fillval = $66;
+    PRG_FIXED:  start = $C000, size = $4000, type = ro, file = %O;
 
     # CHR space
     CHR:        start = $0000, size = $2000, type = ro, file = %O, fill = yes, fillval = $FF;
