partial BHOP implementation

--- a/sys/nrom/layout.cfg
+++ b/sys/nrom/layout.cfg
@@ -25,7 +25,8 @@ MEMORY {
     # CPU space (cartridge)
     # UNUSED:   start = $4020, size = $1FE8, type = rw, file = "";
     # PRGRAM:   start = $6000, size = $2000, type = rw, file = "";
-    PRG_FIXED:  start = $8000, size = $8000, type = ro, file = %O;
+    PRG_FIXED:  start = $8000, size = $4000, type = ro, file = %O, fill = yes, fillval = $FF;
+    SAMPLE_BANK: start = $C000, size = $4000, type = ro, file = %O, fill = yes, fillval = $44;
 
     # CHR space
     CHR:        start = $0000, size = $2000, type = ro, file = %O, fill = yes, fillval = $FF;
@@ -50,7 +51,11 @@ SEGMENTS {
     PRG_BANK_0: load = PRG_FIXED,   type = ro; # non-bankable code
     PRG_BANK_1: load = PRG_FIXED,   type = ro; # non-bankable code
     DATA_BANK_2: load = PRG_FIXED,   type = ro; # non-bankable data
-    SAMPLE_BANK_3: load = PRG_FIXED,   type = ro, optional=yes,  define = yes; # non-bankable sample
+    SAMPLE_BANK_3: load = SAMPLE_BANK,   type = ro, optional=yes,  define = yes; # non-bankable sample
+
+    # DPCM bank(s) used by FT ASM exports, use aligned sample banks; 
+    # DPCM: load = SAMPLE_BANK_3, type = ro, optional=yes, define=yes, align = $100;
+    
 
     PRG_FIXED:  load = PRG_FIXED,   type = ro;
     
@@ -83,7 +88,7 @@ SEGMENTS {
     # Bank DATA when possible. only needs to be swapped in during `copydata`
     DATA:       load = PRG_FIXED,   type = rw,  define = yes, run = RAM; # C support
 
-    VECTORS:    load = PRG_FIXED,   type = ro,  start = $FFFA;
+    VECTORS:    load = SAMPLE_BANK,   type = ro,  start = $FFFA;
 
     CHR:        load = CHR,         type = ro,  optional = yes;
 }
