Use updated BHOP library.

--- a/sys/nrom/layout.cfg
+++ b/sys/nrom/layout.cfg
@@ -26,7 +26,7 @@ MEMORY {
     # UNUSED:   start = $4020, size = $1FE8, type = rw, file = "";
     # PRGRAM:   start = $6000, size = $2000, type = rw, file = "";
     PRG_FIXED:  start = $8000, size = $4000, type = ro, file = %O, fill = yes, fillval = $FF;
-    SAMPLE_BANK: start = $C000, size = $4000, type = ro, file = %O, fill = yes, fillval = $44;
+    SAMPLE_BANK: start = $C000, size = $4000, type = ro, file = %O, fill = yes, fillval = $44, bank = $00;
 
     # CHR space
     CHR:        start = $0000, size = $2000, type = ro, file = %O, fill = yes, fillval = $FF;
@@ -54,7 +54,8 @@ SEGMENTS {
     SAMPLE_BANK_3: load = SAMPLE_BANK,   type = ro, optional=yes,  define = yes; # non-bankable sample
 
     # DPCM bank(s) used by FT ASM exports, use aligned sample banks; 
-    # DPCM: load = SAMPLE_BANK_3, type = ro, optional=yes, define=yes, align = $100;
+    DPCM_12: load = SAMPLE_BANK, type = ro, optional=yes, define=yes, align = $100;
+    DPCM: load = SAMPLE_BANK, type = ro, optional=yes, define=yes, align = $100;
     
 
     PRG_FIXED:  load = PRG_FIXED,   type = ro;
