--- a/sys/nrom/layout.cfg
+++ b/sys/nrom/layout.cfg
@@ -48,9 +48,9 @@ SEGMENTS {
     CPU:        load = CPU,         type = rw,  optional = yes;
 
     # these just sit in static ROM space for NROM. 
-    PRG_BANK_0: load = PRG_FIXED,   type = ro; # non-bankable code
-    PRG_BANK_1: load = PRG_FIXED,   type = ro; # non-bankable code
-    DATA_BANK_2: load = PRG_FIXED,   type = ro; # non-bankable data
+    PRG_BANK_0: load = PRG_FIXED,   type = ro, optional = yes; # non-bankable code
+    PRG_BANK_1: load = PRG_FIXED,   type = ro, optional = yes; # non-bankable code
+    DATA_BANK_2: load = PRG_FIXED,   type = ro, optional = yes; # non-bankable data
     SAMPLE_BANK_3: load = SAMPLE_BANK,   type = ro, optional=yes,  define = yes; # non-bankable sample
 
     # DPCM bank(s) used by FT ASM exports, use aligned sample banks; 
