Added EASY_JOY module.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
             "type": "alchemy65",
             "request": "launch",
             "name": "Debug rom",
-            "romPath": "${workspaceFolder}/build/fire.nes",
-            "dbgPath": "${workspaceFolder}/build/fire.dbg",
+            "romPath": "${workspaceFolder}/build/game.nes",
+            "dbgPath": "${workspaceFolder}/build/game.dbg",
             "program": "Mesen",
             "sourcePath": "${workspaceFolder}/",
             "stopOnEntry": false,
