--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,12 +6,35 @@
         {
             "label": "Build NES project",
             "type": "shell",
+            
             "command": "make",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": true
+            },
+            
             "problemMatcher": [
                 {
-                    "pattern":[
+                    "owner": "nesdev",
+                    "pattern": [
                         {
                             "regexp": "^([^:]*):([0-9]+): ?([^:]*): ?(.*)$",
+                            "file": 1,
+                            "location": 2,
+                            "severity": 3,
+                            "message": 4
+                        }
+                    ]
+                },
+                {
+                "owner": "nesdev",
+                "pattern": [
+                        {
+                            "regexp": "^([^:]*)\\(([0-9]+)\\): ?([^:]*): ?(.*)$",
                             "file": 1,
                             "location": 2,
                             "severity": 3,
